# rfuniverse

./: .gitignore  .gitmodules  DevDoc.md  DevDoc_zh.md  QA.md  README.md  README_zh.md  RFUniverse API.md  RFUniverse Editor User Manual.md  RFUniverse Unity 工程说明.md  SDK_File_List.txt  rfuniverse.slnx
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/: CMakeLists.txt  README.md
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/blender/: README.md  shadowhand_right.blend
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/doc/: HandInertia.md
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/config/: hand_effort_controller_gazebo.yaml  hand_mixed_controller_gazebo.yaml  lh_controller_gazebo.yaml  lh_effort_controller_gazebo.yaml  lh_hybrid_controller_gazebo.yaml  lh_lite_grasp_controller_gazebo.yaml  rh_controller_gazebo.yaml  rh_lite_grasp_controller_gazebo.yaml  rh_variable_pid_controller_gazebo.yaml
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/: process_sensor_parameters.xacro  validate_macros.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/finger/: fingers.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/forearm/: forearm_e.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/palm/: imu.urdf.xacro  palm.transmission.xacro  palm_e.urdf.xacro  palm_g.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/thumb/: thbase.gazebo.xacro  thbase.transmission.xacro  thdistal.transmission.xacro  thhub.gazebo.xacro  thhub.transmission.xacro  thmiddle.gazebo.xacro  thmiddle.transmission.xacro  thproximal.gazebo.xacro  thproximal.transmission.xacro  thumb.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/loaders/: load_hand_model.launch
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/mujoco_models/: robot_ur10_hand_e_model.xml  robot_ur10_hand_e_plus_model.xml  shared_assets.xml  shared_assets_ur10.xml  shared_ur10_options.xml  sr_hand_e_environment_underactuation_test.xml  sr_hand_e_left_environment.xml  sr_hand_e_model.xml  sr_hand_e_plus_environment.xml  sr_ur_hand_e_environment.xml  sr_ur_hand_e_plus_environment.xml
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/mujoco_models/urdfs/: shadowhand_motor_left.urdf  shadowhand_motor_plus_left.urdf
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/other/xacro/: gazebo.urdf.xacro  materials.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/robots/: sr_hand_bimanual.urdf.xacro
Assets/Assets/Model/Robots/ur10_sr_urdf/sr_description/test/: README.md  test_compatibility.py  test_hands.rviz  test_models.launch  test_models.sh  test_process_fingers_parameter.xacro  test_sr_description_urdf.cpp  test_sr_description_urdf.test
Assets/BuiltinAssets/Model/Robots/schunk_svh_description/: README.md  package.xml  svh-standalone-right.urdf
Assets/BuiltinAssets/Model/Robots/schunk_svh_description/Materials/: black.mat  meta.mat  write.mat  yellow.mat
Assets/BuiltinAssets/Model/Robots/schunk_svh_description/urdf/: common.xacro  svh-standalone.urdf.xacro  svh.gazebo.xacro  svh.urdf.xacro
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/: CMakeLists.txt  package.xml  shadowhand.urdf
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/Materials/: LightGrey.mat  White.mat  shadow_thbase_material.mat  shadow_thhub_material.mat  shadow_thmiddle_material.mat  shadow_thproximal_material.mat
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/contrib/: fix_urdf.py
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/meshes/: Cylinder.asset  F1_1.asset  F1_2.asset  distal_ellipsoid_1.asset
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/simox/: README.md  shadowhand.xml
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/simox/model/: F2.wrl  F3.wrl  TH2_z.wrl  TH3_z.wrl  distal_ellipsoid.wrl  forearm.wrl  knuckle.wrl  lfmetacarpal.wrl  palm.wrl  thhub_cube.iv  wrist.wrl
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/urdf/: gazebo_shadowhand_standalone.urdf.xacro  shadow_collider_VHACD.asset  shadowhand.urdf  shadowhand_motor_ellipsoid.orig.urdf
Assets/BuiltinAssets/Model/Robots/sr_grasp_description/urdf/Materials/: Blue.mat  Green.mat  Grey.mat  LightGrey.mat  Red.mat  White.mat  shadow_thbase_material.mat  shadow_thhub_material.mat  shadow_thmiddle_material.mat  shadow_thproximal_material.mat
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/: package.xml
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/hand/config/: hand_controller_gazebo.yaml  lh_grasp_controller_gazebo.yaml  lh_mixed_controller_gazebo.yaml  lh_variable_pid_controller_gazebo.yaml  rh_effort_controller_gazebo.yaml  rh_grasp_controller_gazebo.yaml  rh_hybrid_controller_gazebo.yaml  rh_mixed_controller_gazebo.yaml
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/hand/xacro/: hand.urdf.xacro  hand_c.urdf.xacro  hand_e.urdf.xacro  hand_g.urdf.xacro  process_fingers_parameter.xacro  process_hand_type_version_side_parameters.xacro
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/mujoco_models/: README.md  lh_trajectory_controller.yaml  rh_trajectory_controller.yaml  robot_ur10_model.xml  shared_assets_left.xml  shared_options.xml  sr_hand_e_environment.xml  sr_hand_e_left_model.xml  sr_hand_e_left_options.xml  sr_hand_e_options.xml  sr_hand_e_plus_environment_underactuation_test.xml  sr_hand_e_plus_left_environment.xml  sr_hand_e_plus_left_model.xml  sr_hand_e_plus_model.xml  sr_ur_environment.xml
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/mujoco_models/urdfs/: shadowhand_motor.urdf  shadowhand_motor_plus.urdf  ur10.urdf  ur10_hand.urdf
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/robots/: sr_hand.urdf.xacro
Assets/BuiltinAssets/Model/Robots/ur10_sr_urdf/sr_description/test/: copyright_exclusions.cfg  test_hands.sh  test_process_sensor_parameters.xacro
(+8358 files in other folders)
