<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>schunk_svh_description</name>
  <version>0.0.0</version>
  <description>The schunk_svh_description package</description>

  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>


  <license>GPL-3.0-or-later</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
