<?xml version="1.0"?>
<package>
  <name>sr_grasp_description</name>
  <version>0.0.1</version>
  <description>Description of the Shadow Hand robot.</description>
  <license>Private</license>
  <url type="repository">https://github.com/shadow-robot/sr-grasp-stabilisation/wiki/sr_grasp_description</url>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <author email="mark@shadowrobot.com">Mark Pitchless</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
