<?xml version="1.0"?>
<!--
 Software License Agreement (BSD License)
 Copyright © 2022 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->

<package>
  <name>sr_description</name>
  <version>1.4.0</version>
  <description>sr_description contains the description for Shadow Robot's Hands.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/sr_description</url>
  <url type="repository">https://github.com/shadow-robot/sr_common</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr_common/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>xacro</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>liburdfdom-dev</test_depend>
  <test_depend>urdf</test_depend>
  <test_depend>gtest</test_depend>

</package>
